--- a/backend/user/.env
+++ b/backend/user/.env
@@ -1,3 +1,7 @@
 PORT=8081
 MONGO_URI=mongodb://127.0.0.1:27017/lib_user
 JWT_SECRET= thisisthesecretofthejwt
+CLOUDINARY_URL=cloudinary://698342964319567:ETd-eEhTMfpt6EnIISMADMyxW8U@dmk7whebr
+CLOUDINARY_NAME=dmk7whebr
+CLOUDINARY_APIKEY=698342964319567
+CLODUINARY_APISECRET=ETd-eEhTMfpt6EnIISMADMyxW8U
